# pollapo-rs

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
src/: main.rs  pollapo_yml.rs
src/cmds/: add.rs  install.rs  mod.rs
src/utils/: archive.rs
