[package]
name = "pollapo"
version = "0.0.2"
edition = "2021"
description = "pollapo rust impelmentation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = "0.0.15"
clap = { version = "4.4.11", features = ["derive"] }
piz = "0.5.1"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
shellexpand = "3.1.0"
futures = "0.3.29"

[dev-dependencies]
tokio-test = "*"
serial_test = { version = "*", features = ["file_locks"] }
